--- a/src/main/java/org/tastefuljava/minica/MainFrame.form
+++ b/src/main/java/org/tastefuljava/minica/MainFrame.form
@@ -51,6 +51,14 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="listRenameActionPerformed"/>
           </Events>
         </MenuItem>
+        <MenuItem class="javax.swing.JMenuItem" name="listChangePwd">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Change password..."/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="listChangePwdActionPerformed"/>
+          </Events>
+        </MenuItem>
         <Component class="javax.swing.JPopupMenu$Separator" name="jSeparator2">
         </Component>
         <MenuItem class="javax.swing.JMenuItem" name="listSshEncode">
@@ -190,6 +198,14 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="renameActionPerformed"/>
               </Events>
             </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="changePwd">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Change password..."/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="changePwdActionPerformed"/>
+              </Events>
+            </MenuItem>
             <MenuItem class="javax.swing.JPopupMenu$Separator" name="jSeparator1">
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="sshEncode">
@@ -306,8 +322,8 @@
         </Component>
         <Component class="javax.swing.JTextArea" name="issuer">
           <Properties>
-            <Property name="columns" type="int" value="32"/>
             <Property name="editable" type="boolean" value="false"/>
+            <Property name="columns" type="int" value="32"/>
             <Property name="rows" type="int" value="5"/>
             <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[256, 90]"/>
