Update after work in windows

--- a/src/main/java/org/tastefuljava/minica/MainFrame.form
+++ b/src/main/java/org/tastefuljava/minica/MainFrame.form
@@ -69,6 +69,14 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="listSshEncodeActionPerformed"/>
           </Events>
         </MenuItem>
+        <MenuItem class="javax.swing.JMenuItem" name="listGenerateCSR">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Generate CSR..."/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="listGenerateCSRActionPerformed"/>
+          </Events>
+        </MenuItem>
       </SubComponents>
     </Container>
     <Menu class="javax.swing.JMenuBar" name="menuBar">
